unpackaged/main/default/objects/litify_pm__Source__c/fields/litify_pm__Firm__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Firm Should be available</errorMessage>
        <filterItems>
            <field>litify_pm__Firm__c.litify_pm__Is_Available__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>litify_pm__Firm__c.litify_pm__ExternalId__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <infoMessage>Firm Should be available</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Firm__c</referenceTo>
    <relationshipLabel>Sources</relationshipLabel>
    <relationshipName>Sources</relationshipName>
    <type>Lookup</type>
</CustomField>