unpackaged/main/default/objects/litify_pm__Source__c/fields/litify_pm__Party__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sources</relationshipLabel>
    <relationshipName>Sources</relationshipName>
    <type>Lookup</type>
</CustomField>