unpackaged/main/default/objects/litify_pm__Source__c/fields/litify_tso_DICE_Queue_Priority__c.field-meta.xml
<CustomField>
    <fullName>litify_tso_DICE_Queue_Priority__c</fullName>
    <description>Used to prioritize Intakes with Source Record Type &quot;Attorney Referral&quot; in DICE Queues</description>
    <formula>IF(  litify_tso_Source_Type_Name__c  = &quot;Attorney Referral&quot;, 1, 2)</formula>
    <label>DICE Queue Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>