unpackaged/main/default/objects/litify_pm__Source__c/fields/litify_tso_Source_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_tso_Source_Type_Name__c</fullName>
    <description>Text copy of Record Type Name usable for search layouts.</description>
    <label>Source Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>