unpackaged/main/default/objects/litify_pm__Source__c/recordTypes/Internet.recordType-meta.xml
<RecordType>
    <fullName>Internet</fullName>
    <active>true</active>
    <label>Internet</label>
</RecordType>