unpackaged/main/default/objects/litify_pm__Source__c/recordTypes/litify_pm__Advertisement.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Advertisement</fullName>
    <active>true</active>
    <label>Advertisement</label>
</RecordType>