unpackaged/main/default/objects/litify_pm__Source__c/recordTypes/litify_pm__Attorney_Referral.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Attorney_Referral</fullName>
    <active>true</active>
    <label>Attorney Referral</label>
</RecordType>