unpackaged/main/default/objects/litify_pm__Source__c/recordTypes/litify_pm__Event.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Event</fullName>
    <active>false</active>
    <label>Event</label>
</RecordType>