unpackaged/main/default/objects/litify_pm__Source__c/recordTypes/litify_pm__Other.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Other</fullName>
    <active>true</active>
    <label>Other</label>
</RecordType>